# photomap

./: .gitignore  .pre-commit-config.yaml  LICENSE.txt  README.md  cache.py  database.py  docker-compose.yml  handlers.py  photomap.py  pylintrc  pyproject.toml  requirements-dev.txt  requirements.txt  screenshots.md  settings_default.py  utils.py
photomap/: database.py  import.py  main.py  middlewares.py  photo.py  settings_default.py  utils.py  views.py
photomap/static/css/: geotag.css  map.css
photomap/static/js/: geotag.js  map.js  stats.js  utils.js
photomap/templates/: base.html  error.html  geotag.html  map.html  stats.html
scripts/: exif_check.py  import.py  missing_thumbs.py  supervisor.ini
src/: __init__.py
src/photomap/: __init__.py  cache.py  database.py  import.py  main.py  middlewares.py  photo.py  security.py  settings.py  utils.py  views.py
src/photomap/scripts/: exif_check.py  missing_thumbs.py  photomap.service
src/photomap/static/css/: base.css  geotag.css  map.css
src/photomap/static/js/: geotag.js  login.js  map.js  stats.js  upload.js  utils.js
src/photomap/templates/: base.html  error.html  geotag.html  login.html  macros.html  map.html  stats.html  upload.html
static/css/: base.css  geotag.css  map.css
static/js/: geotag.js  map.js  stats.js  utils.js
templates/: base.html  geotag.html  map.html  stats.html  upload.html
tests/: conftest.py  test_webapp.py
